src/main/java/org/myjaphoo/model/grammars/FilterLanguageParser.java
// Generated from org\myjaphoo\model\grammars\FilterLanguage.g4 by ANTLR 4.3
package org.myjaphoo.model.grammars;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FilterLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__18=1, T__17=2, T__16=3, T__15=4, T__14=5, T__13=6, T__12=7, T__11=8, 
		T__10=9, T__9=10, T__8=11, T__7=12, T__6=13, T__5=14, T__4=15, T__3=16, 
		T__2=17, T__1=18, T__0=19, DateLiteral=20, StringLiteral=21, GroovyCode=22, 
		INT=23, DOUBLE=24, WS=25, BlockComment=26, LineComment=27, REGEX2=28, 
		RegexLiteral=29, SimpleRegExSearchAllStatement=30, MUL=31, DIV=32, ADD=33, 
		SUB=34, LOWER=35, HIGHER=36, EQUAL=37, LOWEREQUALTHEN=38, HIGHEREQUALTHEN=39, 
		UNEQUAL=40, LIKE=41, IS=42, STARTSWITH=43, WIE=44, ENDSWITH=45, REGEX=46, 
		REGEXFIND=47, AND=48, OR=49, NOT=50, NOTHING=51, KB=52, MB=53, GB=54, 
		ID=55;
	public static final String[] tokenNames = {
		"<INVALID>", "'&'", "'groupby'", "','", "'('", "'if'", "'--'", "'{'", 
		"'by'", "'else'", "'}'", "'$'", "'elseif'", "')'", "'.'", "'group'", "';'", 
		"'#'", "'having'", "'|'", "DateLiteral", "StringLiteral", "GroovyCode", 
		"INT", "DOUBLE", "WS", "BlockComment", "LineComment", "'~'", "RegexLiteral", 
		"SimpleRegExSearchAllStatement", "'*'", "'/'", "'+'", "'-'", "'<'", "'>'", 
		"'='", "'<='", "'>='", "'<>'", "'like'", "'is'", "'startswith'", "'wie'", 
		"'endswith'", "'regex'", "'regexfind'", "'and'", "'or'", "'not'", "NOTHING", 
		"KB", "MB", "GB", "ID"
	};
	public static final int
		RULE_filter = 0, RULE_boolexpr = 1, RULE_simpleSearchLiteral = 2, RULE_identWithSimpleRegExSearchStatement = 3, 
		RULE_negatedBoolExpr = 4, RULE_expr = 5, RULE_number = 6, RULE_sizePrefix = 7, 
		RULE_brackedExpr = 8, RULE_literal = 9, RULE_andLiteral = 10, RULE_orLiteral = 11, 
		RULE_qualifier = 12, RULE_substIdentifier = 13, RULE_funcCall = 14, RULE_simpleArg = 15, 
		RULE_argList = 16, RULE_brackedBoolExpr = 17, RULE_group = 18, RULE_groupInstruction = 19, 
		RULE_groupExprList = 20, RULE_havingClause = 21, RULE_groupExprPart = 22, 
		RULE_groupExpr = 23, RULE_groupTerm = 24, RULE_ifStmt = 25, RULE_thenStmt = 26, 
		RULE_elseIfStmt = 27, RULE_elseStmt = 28;
	public static final String[] ruleNames = {
		"filter", "boolexpr", "simpleSearchLiteral", "identWithSimpleRegExSearchStatement", 
		"negatedBoolExpr", "expr", "number", "sizePrefix", "brackedExpr", "literal", 
		"andLiteral", "orLiteral", "qualifier", "substIdentifier", "funcCall", 
		"simpleArg", "argList", "brackedBoolExpr", "group", "groupInstruction", 
		"groupExprList", "havingClause", "groupExprPart", "groupExpr", "groupTerm", 
		"ifStmt", "thenStmt", "elseIfStmt", "elseStmt"
	};

	@Override
	public String getGrammarFileName() { return "FilterLanguage.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FilterLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FilterContext extends ParserRuleContext {
		public BoolexprContext boolexpr() {
			return getRuleContext(BoolexprContext.class,0);
		}
		public SimpleSearchLiteralContext simpleSearchLiteral() {
			return getRuleContext(SimpleSearchLiteralContext.class,0);
		}
		public TerminalNode GroovyCode() { return getToken(FilterLanguageParser.GroovyCode, 0); }
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitFilter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitFilter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_filter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(58); match(GroovyCode);
				}
				break;

			case 2:
				{
				setState(59); simpleSearchLiteral();
				}
				break;

			case 3:
				{
				setState(60); boolexpr(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolexprContext extends ParserRuleContext {
		public Token op;
		public NegatedBoolExprContext negatedBoolExpr() {
			return getRuleContext(NegatedBoolExprContext.class,0);
		}
		public List<BoolexprContext> boolexpr() {
			return getRuleContexts(BoolexprContext.class);
		}
		public IdentWithSimpleRegExSearchStatementContext identWithSimpleRegExSearchStatement() {
			return getRuleContext(IdentWithSimpleRegExSearchStatementContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public BoolexprContext boolexpr(int i) {
			return getRuleContext(BoolexprContext.class,i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode SimpleRegExSearchAllStatement() { return getToken(FilterLanguageParser.SimpleRegExSearchAllStatement, 0); }
		public BrackedBoolExprContext brackedBoolExpr() {
			return getRuleContext(BrackedBoolExprContext.class,0);
		}
		public BoolexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterBoolexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitBoolexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitBoolexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolexprContext boolexpr() throws RecognitionException {
		return boolexpr(0);
	}

	private BoolexprContext boolexpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BoolexprContext _localctx = new BoolexprContext(_ctx, _parentState);
		BoolexprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_boolexpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(64); brackedBoolExpr();
				}
				break;

			case 2:
				{
				setState(65); expr(0);
				setState(66);
				((BoolexprContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REGEX2) | (1L << LOWER) | (1L << HIGHER) | (1L << EQUAL) | (1L << LOWEREQUALTHEN) | (1L << HIGHEREQUALTHEN) | (1L << UNEQUAL) | (1L << LIKE) | (1L << IS) | (1L << STARTSWITH) | (1L << WIE) | (1L << ENDSWITH) | (1L << REGEX) | (1L << REGEXFIND))) != 0)) ) {
					((BoolexprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(67); expr(0);
				}
				break;

			case 3:
				{
				setState(69); expr(0);
				}
				break;

			case 4:
				{
				setState(70); negatedBoolExpr();
				}
				break;

			case 5:
				{
				setState(71); match(SimpleRegExSearchAllStatement);
				}
				break;

			case 6:
				{
				setState(72); identWithSimpleRegExSearchStatement();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(81);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new BoolexprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolexpr);
						setState(75);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(76); ((BoolexprContext)_localctx).op = match(AND);
						setState(77); boolexpr(5);
						}
						break;

					case 2:
						{
						_localctx = new BoolexprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolexpr);
						setState(78);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(79); ((BoolexprContext)_localctx).op = match(OR);
						setState(80); boolexpr(4);
						}
						break;
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class SimpleSearchLiteralContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public SimpleSearchLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleSearchLiteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterSimpleSearchLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitSimpleSearchLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitSimpleSearchLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleSearchLiteralContext simpleSearchLiteral() throws RecognitionException {
		SimpleSearchLiteralContext _localctx = new SimpleSearchLiteralContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleSearchLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); literal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentWithSimpleRegExSearchStatementContext extends ParserRuleContext {
		public TerminalNode SimpleRegExSearchAllStatement() { return getToken(FilterLanguageParser.SimpleRegExSearchAllStatement, 0); }
		public QualifierContext qualifier() {
			return getRuleContext(QualifierContext.class,0);
		}
		public IdentWithSimpleRegExSearchStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identWithSimpleRegExSearchStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterIdentWithSimpleRegExSearchStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitIdentWithSimpleRegExSearchStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitIdentWithSimpleRegExSearchStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentWithSimpleRegExSearchStatementContext identWithSimpleRegExSearchStatement() throws RecognitionException {
		IdentWithSimpleRegExSearchStatementContext _localctx = new IdentWithSimpleRegExSearchStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_identWithSimpleRegExSearchStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); qualifier();
			setState(89); match(SimpleRegExSearchAllStatement);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegatedBoolExprContext extends ParserRuleContext {
		public BrackedBoolExprContext brackedBoolExpr() {
			return getRuleContext(BrackedBoolExprContext.class,0);
		}
		public NegatedBoolExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negatedBoolExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterNegatedBoolExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitNegatedBoolExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitNegatedBoolExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NegatedBoolExprContext negatedBoolExpr() throws RecognitionException {
		NegatedBoolExprContext _localctx = new NegatedBoolExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_negatedBoolExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); match(NOT);
			setState(92); brackedBoolExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Token op;
		public BrackedExprContext brackedExpr() {
			return getRuleContext(BrackedExprContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public TerminalNode NOTHING() { return getToken(FilterLanguageParser.NOTHING, 0); }
		public TerminalNode RegexLiteral() { return getToken(FilterLanguageParser.RegexLiteral, 0); }
		public QualifierContext qualifier() {
			return getRuleContext(QualifierContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SubstIdentifierContext substIdentifier() {
			return getRuleContext(SubstIdentifierContext.class,0);
		}
		public AndLiteralContext andLiteral() {
			return getRuleContext(AndLiteralContext.class,0);
		}
		public TerminalNode StringLiteral() { return getToken(FilterLanguageParser.StringLiteral, 0); }
		public TerminalNode DateLiteral() { return getToken(FilterLanguageParser.DateLiteral, 0); }
		public OrLiteralContext orLiteral() {
			return getRuleContext(OrLiteralContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(95); brackedExpr();
				}
				break;

			case 2:
				{
				setState(96); funcCall();
				}
				break;

			case 3:
				{
				setState(97); substIdentifier();
				}
				break;

			case 4:
				{
				setState(98); number();
				}
				break;

			case 5:
				{
				setState(99); match(DateLiteral);
				}
				break;

			case 6:
				{
				setState(100); match(StringLiteral);
				}
				break;

			case 7:
				{
				setState(101); match(NOTHING);
				}
				break;

			case 8:
				{
				setState(102); qualifier();
				}
				break;

			case 9:
				{
				setState(103); andLiteral();
				}
				break;

			case 10:
				{
				setState(104); orLiteral();
				}
				break;

			case 11:
				{
				setState(105); match(RegexLiteral);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(114);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(108);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(109);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==MUL || _la==DIV) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(110); expr(6);
						}
						break;

					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(111);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(112);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==ADD || _la==SUB) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(113); expr(5);
						}
						break;
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(FilterLanguageParser.INT, 0); }
		public SizePrefixContext sizePrefix() {
			return getRuleContext(SizePrefixContext.class,0);
		}
		public TerminalNode DOUBLE() { return getToken(FilterLanguageParser.DOUBLE, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==DOUBLE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(121);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(120); sizePrefix();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SizePrefixContext extends ParserRuleContext {
		public TerminalNode GB() { return getToken(FilterLanguageParser.GB, 0); }
		public TerminalNode KB() { return getToken(FilterLanguageParser.KB, 0); }
		public TerminalNode MB() { return getToken(FilterLanguageParser.MB, 0); }
		public SizePrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sizePrefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterSizePrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitSizePrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitSizePrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SizePrefixContext sizePrefix() throws RecognitionException {
		SizePrefixContext _localctx = new SizePrefixContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sizePrefix);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KB) | (1L << MB) | (1L << GB))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BrackedExprContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BrackedExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_brackedExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterBrackedExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitBrackedExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitBrackedExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BrackedExprContext brackedExpr() throws RecognitionException {
		BrackedExprContext _localctx = new BrackedExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_brackedExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); match(T__15);
			setState(126); expr(0);
			setState(127); match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FilterLanguageParser.ID, 0); }
		public TerminalNode StringLiteral() { return getToken(FilterLanguageParser.StringLiteral, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterLanguageListener ) ((FilterLanguageListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterLanguageVisitor ) return ((FilterLanguageVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_la = _input.LA(1);
			if ( !(_la==StringLiteral || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndLiteralContext extends ParserRuleContext {
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public AndLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
